# agendas

eagendas-scraper/: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  scraper.py
eagendas-scraper/.streamlit/: config.toml
eagendas-scraper/dados_teste/: agenda_consolidada_20260514_132023.csv
eagendas-scraper/dados_teste2/: Alexandre_Silveira_de_Oliveira.json  Brenno_Leopoldo_Cavalcante_de_Paulaㅤ.csv  Brenno_Leopoldo_Cavalcante_de_Paulaㅤ.json  Daniel_Vieira_Sarapu.csv  Daniel_Vieira_Sarapu.json  agenda_consolidada_20260514_132525.csv  agenda_consolidada_20260514_132525.json
